# pyeXRC

./: MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: release.yml
exrc/: __init__.py  _client.py  _const.py  _exception.py  _model.py  _type.py  _utils.py  auth.py  client.py  exception.py  utils.py
