[metadata]
name = exrc
version = 0.13.0
url = https://github.com/eXhumer/eXRC
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Reddit OAuth2 Client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
zip_safe = False
include_package_data = True
packages = exrc
install_requires =
    requests
    requests-toolbelt
    websocket-client
