[metadata]
name = exrc
version = 0.16.0.post1
url = https://github.com/eXhumer/pyeXRC
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Reddit OAuth2 Client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.11
zip_safe = False
include_package_data = True
packages = exrc
install_requires =
    requests
    requests-toolbelt
    websocket-client

[flake8]
max-line-length = 99
