[metadata]
name = exrc
version = 0.4.0
url = https://github.com/eXhumer/pyeXRC
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = AGPL-3.0-only
license_files = COPYING.md
description = Reddit OAuth2 client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.11
zip_safe = False
include_package_data = True
packages = exrc
install_requires =
    httpx
    websocket-client

[options.extras_require]
http2 =
    httpx[http2]

[flake8]
max-line-length = 99
